7-31-2025
- append betterfox patch to the shyfox firefox theme
- betterfox and shyfox configurations will now check for programs._1password-gui.enable
  before installing the 1password firefox extension


7-30-2025
- rewrite swayidle and hypridle services to include configuration options "on-bat" and "on-ac" for timeouts.
- set new default timeout values for sway and hyprland configurations:
  on-bat:
  - lockscreen = 150 seconds
  - dpms (screen-blank) = 150 seconds
  - suspend = 600 seconds
	on-ac:
	- lockscreen = 0
	- dpms = 0
	- suspend = 0
- add kanshi profile for twilight


7-29-2025
- fix an issue where dpms timeout for swayidle still referred to swaylock.settings


7-28-2025
- add format script for nix files under /scripts/nixfmt.sh
- format all nix files in the project to follow the nixpkgs rfc style standard
- fix an import bug for take-screenshot-xorg where the import was missing the .nix extension
- fix nvidia module to use hardware.nvidia.open = true; by default.
- add file-roller and programs.seahorse to excluded gnome packages
- changes to the assets repository:
  - added wallpapers:
    - scarlet-tree-light
    - megumin-starry-sky
  - removed wallpapers:
    - the-nightmare-of-finding-wallpapers
    - winders7-machine-edition
    - hallownest-bench
  - renamed wallpapers:
    - celeste-chill -> celeste-chapter-1-end
    - celeste -> celeste-chapter-7-end
    - two-hallow-knights -> ghost-and-hornet-2
    - siblings -> hollow-knight-lake
    - kaori -> kaori-1
    - kitties -> kittens
    - celeste-mountain -> mountain
    - the-nightmare-before-firefox -> nightmare-before-christmas-1
    - the-nightmare-before-grub -> nightmare-before-christmas-2
    - oneshot-1 -> niko-1
    - oneshot-2 -> niko-2
    - oneshot-title-screen -> niko-3
    - oneshot-roomba -> niko-roomba
    - the-gang-1 -> omori-gang-1
    - the-gang-2 -> omori-gang-2
    - the-gang-headspace-2 -> omori-gang-3
    - the-gang-headspace -> omori-gang-4