@@ -68,89 +68,91 @@ in
     };
   };
 
-  config = {
-    nixpkgs = {
-      config.allowUnfree = true;
-    };
-
-    # things needed for script modules to work
-    home.packages =
-      with pkgs;
-      [
-        findutils
-        gnused
-        gawk
-        imagemagick
-      ]
-      ++ optionals (config.services.network-manager-applet.enable) [
-        networkmanagerapplet
-      ]
-      ++ optionals (pkgs.stdenv.isLinux) [
-        psmisc
-        brightnessctl
-        pamixer
-        procps # pgrep, pkill
-        coreutils-full
-      ];
-
-    # enable the profile requested by config.custom.profiles
-    profiles = {
-      alacritty = enableProfile "alacritty";
-      bat = enableProfile "bat";
-      dunst = enableProfile "dunst";
-      fastfetch = enableProfile "fastfetch";
-      firefox = enableProfile "firefox";
-      fzf = enableProfile "fzf";
-      fish = enableProfile "fish";
-      kitty = enableProfile "kitty";
-      rofi = enableProfile "rofi";
-      swaylock = enableProfile "swaylock";
-      swaync = enableProfile "swaync";
-      hyprlock = enableProfile "hyprlock";
-      stylix = enableProfile "stylix";
-      starship = enableProfile "starship";
-      lazygit = enableProfile "lazygit";
-      tmux = enableProfile "tmux";
-      vscode = enableProfile "vscode";
-      rmpc = enableProfile "rmpc";
-      polybar = enableProfile "polybar";
-      yazi = enableProfile "yazi";
-      waybar = enableProfile "waybar";
-      zsh = enableProfile "zsh";
-
-      desktopThemes = enableProfile "desktopTheme";
-
-      gnome = enableProfile "gnome";
-      i3 = enableProfile "i3";
-      sway = enableProfile "sway";
-      hyprland = enableProfile "hyprland";
-    };
-
-    # enable programs using the custom user preferences
-    # use this list for the string values of the custom options, must match exactly
-    programs =
-      let
-        cfg = config.custom;
-      in
-      {
-        home-manager.enable = mkDefault true;
-        neovim-custom.enable = mkDefault (cfg.editor == "nvim");
-        vscode.enable = mkDefault (cfg.editor == "codium");
-        zed.enable = mkDefault (cfg.editor == "zed");
-
-        # browsers
-        firefox.enable = mkDefault (cfg.browser == "firefox");
-        brave.enable = mkDefault (cfg.browser == "brave");
-
-        # file managers
-        nautilus.enable = mkDefault (cfg.fileManager == "nautilus");
-        dolphin.enable = mkDefault (cfg.fileManager == "dolphin");
-        yazi.enable = mkDefault (cfg.fileManager == "yazi");
-
-        #terminals
-        kitty.enable = mkDefault (cfg.terminal == "kitty");
-        ghostty.enable = mkDefault (cfg.terminal == "ghostty");
-        alacritty.enable = mkDefault (cfg.terminal == "alacritty");
+  config =
+    let
+      cfg = config.custom;
+    in
+    {
+      nixpkgs = {
+        config.allowUnfree = true;
       };
-  };
+
+      # things needed for script modules to work
+      home.packages =
+        with pkgs;
+        [
+          findutils
+          gnused
+          gawk
+          imagemagick
+        ]
+        ++ optionals (config.services.network-manager-applet.enable) [
+          networkmanagerapplet
+        ]
+        ++ optionals (pkgs.stdenv.isLinux) [
+          psmisc
+          brightnessctl
+          pamixer
+          procps # pgrep, pkill
+          coreutils-full
+        ];
+
+      # enable the profile requested by config.custom.profiles
+      profiles = {
+        alacritty = enableProfile "alacritty";
+        bat = enableProfile "bat";
+        dunst = enableProfile "dunst";
+        fastfetch = enableProfile "fastfetch";
+        firefox = enableProfile "firefox";
+        fzf = enableProfile "fzf";
+        fish = enableProfile "fish";
+        kitty = enableProfile "kitty";
+        rofi = enableProfile "rofi";
+        swaylock = enableProfile "swaylock";
+        swaync = enableProfile "swaync";
+        hyprlock = enableProfile "hyprlock";
+        stylix = enableProfile "stylix";
+        starship = enableProfile "starship";
+        lazygit = enableProfile "lazygit";
+        tmux = enableProfile "tmux";
+        vscode = enableProfile "vscode";
+        rmpc = enableProfile "rmpc";
+        polybar = enableProfile "polybar";
+        yazi = enableProfile "yazi";
+        waybar = enableProfile "waybar";
+        zsh = enableProfile "zsh";
+
+        desktopThemes = enableProfile "desktopTheme";
+
+        gnome = enableProfile "gnome";
+        i3 = enableProfile "i3";
+        sway = enableProfile "sway";
+        hyprland = enableProfile "hyprland";
+      };
+
+      # enable programs using the custom user preferences
+      # use this list for the string values of the custom options, must match exactly
+      programs =
+
+        {
+          home-manager.enable = mkDefault true;
+          neovim-custom.enable = mkDefault (cfg.editor == "nvim");
+          vscode.enable = mkDefault (cfg.editor == "codium");
+          zed.enable = mkDefault (cfg.editor == "zed");
+
+          # browsers
+          firefox.enable = mkDefault (cfg.browser == "firefox");
+          brave.enable = mkDefault (cfg.browser == "brave");
+
+          # file managers
+          nautilus.enable = mkDefault (cfg.fileManager == "nautilus");
+          dolphin.enable = mkDefault (cfg.fileManager == "dolphin");
+          yazi.enable = mkDefault (cfg.fileManager == "yazi");
+
+          #terminals
+          kitty.enable = mkDefault (cfg.terminal == "kitty");
+          ghostty.enable = mkDefault (cfg.terminal == "ghostty");
+          alacritty.enable = mkDefault (cfg.terminal == "alacritty");
+        };
+    };
 }
